王超：创建demo示例集合